Updated gradle build, readme instructions and docker files